改了点很小的bug

--- a/a_important/html/head.html
+++ b/a_important/html/head.html
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head> <!-- 头部标签,作用就是保存元数据 -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width"> <!-- 元数据(描述数据的数据):<meta> 标签-->
-    <title>&lt;title&gt; element</title> <!-- 出现在浏览器标签栏 -->
-  </head>
-  <body>
-    <h1>&lt;h1&gt; element</h1>
-  </body>
+<html lang="en-US"> <!-- 定义网页的语言 -->
+
+<head> <!-- 头部标签,作用就是保存元数据 -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width"> <!-- 元数据(描述数据的数据):<meta> 标签-->
+  <title>&lt;title&gt; element</title> <!-- 出现在浏览器标签栏 -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon" /> <!-- 页面添加网页图标的方式 -->
+  <link rel="stylesheet" href="my-css-file.css" /> <!-- 链接外部 CSS 文件 -->
+  <script src="my-js-file.js" defer></script> <!-- 链接外部 JS 文件 -->
+
+</head>
+
+<body>
+  <h1>&lt;h1&gt; element</h1>
+  <!-- 标题和段落 -->
+  <h1>三国演义</h1>
+
+<p>罗贯中</p>
+
+<h2>第一回 宴桃园豪杰三结义 斩黄巾英雄首立功</h2>
+
+<p>
+  话说天下大势，分久必合，合久必分。周末七国分争，并入于秦。及秦灭之后，楚、汉分争，又并入于汉……
+</p>
+
+<h2>第二回 张翼德怒鞭督邮 何国舅谋诛宦竖</h2>
+
+<p>
+  且说董卓字仲颖，陇西临洮人也，官拜河东太守，自来骄傲。当日怠慢了玄德，张飞性发，便欲杀之……
+</p>
+
+<h3>却说张飞</h3>
+
+<p>
+  却说张飞饮了数杯闷酒，乘马从馆驿前过，见五六十个老人，皆在门前痛哭。飞问其故，众老人答曰：“督邮逼勒县吏，欲害刘公；我等皆来苦告，不得放入，反遭把门人赶打！”……
+</p>
+
+</body>
+
 </html>
