--- a/a_important/html/head.html
+++ b/a_important/html/head.html
@@ -35,6 +35,70 @@
 <p>
   却说张飞饮了数杯闷酒，乘马从馆驿前过，见五六十个老人，皆在门前痛哭。飞问其故，众老人答曰：“督邮逼勒县吏，欲害刘公；我等皆来苦告，不得放入，反遭把门人赶打！”……
 </p>
+<!-- 列表 -->
+ <!-- 无序列表 -->
+ <ul>
+  <li>豆浆</li>
+  <li>油条</li>
+  <li>豆汁</li>
+  <li>焦圈</li>
+</ul>
+<!-- 有序列表 -->
+ <ol>
+  <li>沿这条路走到头</li>
+  <li>右转</li>
+  <li>直行穿过第一个十字路口</li>
+  <li>在第三个十字路口处左转</li>
+  <li>继续走 300 米，学校就在你的右手边</li>
+</ol>
+<!-- 嵌套列表 -->
+<ol>
+  <li>
+    先用蛋白一个、盐半茶匙及淀粉两大匙搅拌均匀，调成“腌料”，鸡胸肉切成约一厘米见方的碎丁并用“腌料”搅拌均匀，腌渍半小时。
+  </li>
+  <li>
+    用酱油一大匙、淀粉水一大匙、糖半茶匙、盐四分之一茶匙、白醋一茶匙、蒜末半茶匙调拌均匀，调成“综合调味料”。
+  </li>
+  <li>
+    鸡丁腌好以后，色拉油下锅烧热，先将鸡丁倒入锅内，用大火快炸半分钟，炸到变色之后，捞出来沥干油汁备用。
+  </li>
+  <li>
+    在锅里留下约两大匙油，烧热后将切好的干辣椒下锅，用小火炒香后，再放入花椒粒和葱段一起爆香。随后鸡丁重新下锅，用大火快炒片刻后，再倒入“综合调味料”继续快炒。
+    <ul>
+      <li>
+        如果你采用正宗川菜做法，最后只需加入花生米，炒拌几下就可以起锅了。
+      </li>
+      <li>如果你在北方，可加入黄瓜丁、胡萝卜丁和花生米，翻炒后起锅。</li>
+    </ul>
+  </li>
+</ol>
+<!-- 粗体、斜体 -->
+<p>
+  这杯液体<strong>毒性很大</strong>——如果饮用了它，你<strong>可能<em>会死</em></strong>。
+</p>
+<!-- 另一种粗体、斜体、下划线 的表达方式-->
+<!-- 学名 -->
+<p>
+  红喉北蜂鸟（学名：<i>Archilocus colubris</i>）是北美东部最常见的蜂鸟品种。
+</p>
+
+<!-- 舶来词 -->
+<p>
+  菜单上有好多舶来词汇，比如 <i lang="uk-latn">vatrushka</i>（东欧乳酪面包）、<i
+    lang="id"
+    >nasi goreng</i
+  >（印尼炒饭）以及 <i lang="fr">soupe à l'oignon</i>（法式洋葱汤）。
+</p>
+
+<!-- 已知的错误书写 -->
+<p>总有一天我会改掉写<u class="spelling-error">措字</u>的毛病。</p>
+
+<!-- 在定义中，被定义的术语 -->
+<dl>
+  <dt>语义化 HTML</dt>
+  <dd>根据元素的<b>语义</b>意义而不是外观来使用它们。</dd>
+</dl>
+
 
 </body>
 
