完成解释器，认为python的水平已经到达入门级

--- a/a_test/blog登录界面/index.html
+++ b/a_test/blog登录界面/index.html
@@ -26,7 +26,7 @@
     </form>
   </div>
   <div class="footer">
-    <a href="https://beian.miit.gov.cn/#/Integrated/recordQuery" target="_blank" style="color: white; text-decoration: none;">粤ICP备2024340347号</a><br>
+    <a href="https://beian.miit.gov.cn/#/Integrated/recordQuery" target="_blank" style="color: white;text-decoration: none;">粤ICP备2024340347号-1</a><br>
     公安网安备：XXXX-XXXXXX
   </div>
   <script src="script.js"></script>
