完善了blog的登录界面

--- a/a_test/blog登录界面/index.html
+++ b/a_test/blog登录界面/index.html
@@ -27,7 +27,7 @@
   </div>
   <div class="footer">
     <a href="https://beian.miit.gov.cn/#/Integrated/recordQuery" target="_blank" style="color: white;text-decoration: none;">粤ICP备2024340347号-1</a><br>
-    公安网安备：XXXX-XXXXXX
+    <a href="https://beian.mps.gov.cn/#/query/webSearch?code=44030002005836" rel="noreferrer" target="_blank" style="color: white;text-decoration: none;"><img src = "备案图标.png" style="vertical-align: middle; width: 16px; height: 16px;">  粤公网安备44030002005836号</a> 
   </div>
   <script src="script.js"></script>
 </body>
